--- a/data_wrangling_i-main/tidy_data.Rmd
+++ b/data_wrangling_i-main/tidy_data.Rmd
@@ -128,7 +128,7 @@ pups_df =
   read_csv("data/FAS_pups.csv", na = c("NA", ".", "")) |> 
   janitor::clean_names() |> 
   mutate(
-    sex = case_match(
+    sex = case_match(#recode "1" as "male" while recode "2" as "female"
       sex, 
       1 ~ "male",
       2 ~ "female"
